posiGen_FullsendBox/src/objects/Project_Expense__c.object
<CustomObject>
    <description>This is to log expenses against a project not tied to a task.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Expense Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the Expense if needed to expand on why needed.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Labor_cost__c</fullName>
        <formula>(Time_spent__c  * 15.21)+100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time spent * 15.21</inlineHelpText>
        <label>Labor cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_cost__c</fullName>
        <formula>Amount__c * 1.67</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total material cost with  67% markup</inlineHelpText>
        <label>Material cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_used__c</fullName>
        <label>Material used</label>
        <picklist>
            <picklistValues>
                <fullName>Drywall sq ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulk tubes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foam cans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weatherstripping linear ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermostats qty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastic (bucket qty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightbulbs qty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Detector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Blown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Batt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Expenses</relationshipLabel>
        <relationshipName>Project_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <inlineHelpText>What type of additional expense it it?</inlineHelpText>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fancy filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see description)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_spent__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Record the time spent to finish the project</description>
        <inlineHelpText>Record the time spent to finish the project</inlineHelpText>
        <label>Time spent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <formula>Labor_cost__c  +   (Amount__c*1.67)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Labor and material cost</inlineHelpText>
        <label>Total cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of Expense this is</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Contractual Addiition Expense Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Additional Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>x__c</fullName>
        <inlineHelpText>Total cost of materials used for this expense</inlineHelpText>
        <label>x</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Expense</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Project Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Expenses</pluralLabel>
    <recordTypes>
        <fullName>EE_expense</fullName>
        <active>true</active>
        <description>Expenses related to EE projects</description>
        <label>EE expense</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>